스냅샷의 정적 팩터리 메서드 제거